-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Merge of jdk-25+10, introduced JDk-8348411 and a new assertion (Parse::array_store_check()) which fails with value object arrays.
Merge PR will leave it commented, but the merge itself might be erroneous. Attached original conflict and the adjusting commit in the PR:
Merge adjusted (may be incorrect): https://github.com/openjdk/valhalla/pull/1376/commits/7695e60a16b7b7bd89ef2c5b31d344ad6db91946
Merge PR will leave it commented, but the merge itself might be erroneous. Attached original conflict and the adjusting commit in the PR:
Merge adjusted (may be incorrect): https://github.com/openjdk/valhalla/pull/1376/commits/7695e60a16b7b7bd89ef2c5b31d344ad6db91946
- relates to
-
JDK-8348411 C2: Remove the control input of LoadKlassNode and LoadNKlassNode
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/dd0b9589
-
Review(lworld)
openjdk/valhalla/1410