8350632: [lworld] Parse::array_store_check() assert introduced by 8348411 fails